WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302434
[Regression
302027@main
] Red and Blue channels are swapped on ToT WebGL WebXR
https://bugs.webkit.org/show_bug.cgi?id=302434
Summary
[Regression 302027@main] Red and Blue channels are swapped on ToT WebGL WebXR
Mike Wyrzykowski
Reported
2025-11-12 16:58:12 PST
Red and Blue channels are swapped on ToT WebGL WebXR
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2025-11-12 16:58:21 PST
rdar://164508978
Mike Wyrzykowski
Comment 2
2025-11-12 17:07:00 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53848
EWS
Comment 3
2025-11-12 20:08:38 PST
Committed
302960@main
(e904eb2a3963): <
https://commits.webkit.org/302960@main
> Reviewed commits have been landed. Closing PR #53848 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug