[Regression 302027@main] Red and Blue channels are swapped on ToT WebGL WebXR https://bugs.webkit.org/show_bug.cgi?id=302434 rdar://164508978

Reviewed by Dan Glastonbury.

Input source on Cocoa is BGRA, not RGBA.

* Source/WebCore/Modules/webxr/WebXROpaqueFramebuffer.cpp:
(WebCore::WebXROpaqueFramebuffer::bindCompositorTexturesForDisplay):

Canonical link: https://commits.webkit.org/302960@main